<resources>
    <string name="app_name">SimpleCalculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="mod">%</string>
    <string name="point">.</string>
    <string name="open">(</string>
    <string name="close">)</string>
    <string name="result">=</string>
    <string name="pow">^</string>

    <string name="deleter">DEL</string>
    <string name="returner">RET</string>
    <string name="space">SPACE</string>
    <string name="cleaner">C</string>
</resources>