<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <TextView

        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        android:maxLines="1"
        android:textColor="@color/primaryDark"
        android:textSize="60sp" />

    <TableRow>

        <Button
            android:id="@+id/returner"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/primaryDark"
            android:text="@string/returner"
            android:textColor="@color/accent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/space"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/primaryDark"
            android:text="@string/space"
            android:textColor="@color/accent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/delete"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/primaryDark"
            android:text="@string/deleter"
            android:textColor="@color/accent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/clear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/primaryDark"
            android:text="@string/cleaner"
            android:textColor="@color/accent"
            android:textSize="30sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/seven"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addSymbol"
            android:text="@string/seven"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/eight"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addSymbol"
            android:text="@string/eight"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nine"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addSymbol"
            android:text="@string/nine"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/primaryDark"
            android:onClick="addSymbol"
            android:text="@string/add"
            android:textColor="@color/accent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/result"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/primaryDark"
            android:text="@string/result"
            android:textColor="@color/accent"
            android:textSize="30sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/four"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addSymbol"
            android:text="@string/four"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/five"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addSymbol"
            android:text="@string/five"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/six"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addSymbol"
            android:text="@string/six"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sub"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/primaryDark"
            android:onClick="addSymbol"
            android:text="@string/sub"
            android:textColor="@color/accent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mod"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/primaryDark"
            android:onClick="addSymbol"
            android:text="@string/mod"
            android:textColor="@color/accent"
            android:textSize="30sp"
            android:textStyle="bold" />


    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/one"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addSymbol"
            android:text="@string/one"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/two"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addSymbol"
            android:text="@string/two"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/three"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addSymbol"
            android:text="@string/three"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mul"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/primaryDark"
            android:onClick="addSymbol"
            android:text="@string/mul"
            android:textColor="@color/accent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/primaryDark"
            android:onClick="addSymbol"
            android:text="@string/pow"
            android:textColor="@color/accent"
            android:textSize="30sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/zero"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addSymbol"
            android:text="@string/zero"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/openbr"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addSymbol"
            android:text="@string/open"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/closebr"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addSymbol"
            android:text="@string/close"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/div"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/primaryDark"
            android:onClick="addSymbol"
            android:text="@string/div"
            android:textColor="@color/accent"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/point"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/primaryDark"
            android:onClick="addSymbol"
            android:text="@string/point"
            android:textColor="@color/accent"
            android:textSize="30sp"
            android:textStyle="bold" />
    </TableRow>

</TableLayout>